--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -13,10 +13,15 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">What's New</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Novidades</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </header>
+        <div class="content">
+            <div class="textBox">
+                <h2>Não é só café<br>Isso é<span>Starbucks</span></h2>
+            </div>
+        </div>
     </section>
 </body>
 </html>
