--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -19,7 +19,11 @@
         </header>
         <div class="content">
             <div class="textBox">
-                <h2>Não é só café<br>Isso é<span>Starbucks</span></h2>
+                <h2>Não é só café<br>Isso é <span>Starbucks</span></h2>
+                <p>Lorem ipsum dolor sit amet,consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aligua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nissi ut aliquip ex ea commodo</p>
+                <a href="#">Saiba mais</a>
             </div>
         </div>
     </section>
