--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -24,6 +24,9 @@
                     tempor incididunt ut labore et dolore magna aligua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nissi ut aliquip ex ea commodo</p>
                 <a href="#">Saiba mais</a>
+                <div class="imgBox">
+                    <img src="img1.png" class="starbucks">
+                </div>
             </div>
         </div>
     </section>
