--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -28,6 +28,11 @@
                     <img src="img1.png" class="starbucks">
                 </div>
         </div>
+        <ul class="thumb">
+            <li><img src="thumb1.png"></li>
+            <li><img src="thumb2.png"></li>
+            <li><img src="thumb3.png"></li>
+        </ul>
     </section>
 </body>
 </html>
