--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -33,6 +33,11 @@
             <li><img src="thumb2.png"></li>
             <li><img src="thumb3.png"></li>
         </ul>
+        <ul class="sci">
+            <li><a href="#"><img src="facebook.png"></a></li>
+            <li><a href="#"><img src="twitter.png"></a></li>
+            <li><a href="#"><img src="instagram.png"></a></li>
+        </ul>
     </section>
 </body>
 </html>
