--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <section>
+        <div class="circle"></div>
         <header>
             <a href="#" class="logo"><img src="logo.png"></a>
             <ul>
