--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -30,9 +30,9 @@
                 </div>
         </div>
         <ul class="thumb">
-            <li><img src="thumb1.png"></li>
-            <li><img src="thumb2.png"></li>
-            <li><img src="thumb3.png"></li>
+            <li><img src="thumb1.png" onclick="imgSlider('img1.png')";changeCircleColor></li>
+            <li><img src="thumb2.png" onclick="imgSlider('img2.png')";changeCircleColor></li>
+            <li><img src="thumb3.png" onclick="imgSlider('img3.png')";changeCircleColor></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="facebook.png"></a></li>
@@ -40,5 +40,15 @@
             <li><a href="#"><img src="instagram.png"></a></li>
         </ul>
     </section>
+
+    <script type="text/javascript">
+        function imgSlider(anything){
+            document.querySelector('.starbucks').src = anything;
+        }
+        function changeCircleColor(color){
+            const circle = document.querySelector('.circle');
+            circle.style.background = color;
+        }
+    </script>
 </body>
 </html>
