--- a/Starbucks clone/index.html
+++ b/Starbucks clone/index.html
@@ -30,9 +30,9 @@
                 </div>
         </div>
         <ul class="thumb">
-            <li><img src="thumb1.png" onclick="imgSlider('img1.png')";changeCircleColor></li>
-            <li><img src="thumb2.png" onclick="imgSlider('img2.png')";changeCircleColor></li>
-            <li><img src="thumb3.png" onclick="imgSlider('img3.png')";changeCircleColor></li>
+            <li><img src="thumb1.png" onclick="imgSlider('img1.png') ;changeCircleColor('#017143')"></li>
+            <li><img src="thumb2.png" onclick="imgSlider('img2.png') ;changeCircleColor('#eb7495')"></li>
+            <li><img src="thumb3.png" onclick="imgSlider('img3.png') ;changeCircleColor('#d752b1')"></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="facebook.png"></a></li>
